29313 handle multiple include requests (#107)
* 29313 Handle multiple include requests
Added failing test

* 29313 Handle multiple include requests
Fixed MultipleBagFetchException using pos column on relationship table